...
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinner_genre"
        android:layout_width="157dp"
        android:layout_height="44dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:spinnerMode="dropdown"
        android:prompt="@string/new_album_genre"
...
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinner_label"
        android:layout_width="157dp"
        android:layout_height="44dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:spinnerMode="dropdown"
        android:prompt="@string/new_album_label"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_album_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="492dp"
        android:backgroundTint="#00AA00"
        android:text="@string/create_album"
        app:layout_constraintEnd_toEndOf="parent"
...
