...
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_album"
            android:icon="@drawable/ic_queue_music_24"
            android:title="@string/add_album" />
        <item
            android:id="@+id/nav_add_artist"
            android:icon="@drawable/ic_person_add_24"
            android:title="@string/add_artist" />
        <item
            android:id="@+id/nav_add_album_tracks"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_album_tracks" />
        <item
            android:id="@+id/nav_add_album_to_artist"
            android:icon="@drawable/ic_recent_actors_24"
            android:title="@string/add_album_to_artist" />
    </group>
</menu>
